@@ -7,6 +7,7 @@
   * Prevent memory leak in ImageToBlob() if image write fails.
   * In rare cases, label would not auto-size properly (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21716).
+  * Identify command now reports the image colorspace for non-verbose results.
 
 2012-08-15  6.7.9-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.9-0, SVN revision 8970.
